# licode

./: .gitignore  Vagrantfile  erizo.sln
erizo/src/erizo/: CMakeLists.txt  DtlsTransport.cpp  DtlsTransport.h  IceConnection.cpp  IceConnection.h  LibNiceConnection.cpp  LibNiceConnection.h  MediaDefinitions.cpp  MediaDefinitions.h  MediaStream.cpp  MediaStream.h  NiceConnection.cpp  NiceConnection.h  NicerConnection.cpp  NicerConnection.h  OneToManyProcessor.cpp  OneToManyProcessor.h  SdpInfo.cpp  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  Stats.cpp  Stats.h  Transport.h  WebRtcConnection.cpp  WebRtcConnection.h  logger.cpp  logger.h
erizo/src/erizo/bandwidth/: MaxVideoBWDistributor.cpp  TargetVideoBWDistributor.cpp
erizo/src/erizo/dtls/: DtlsClient.cpp  DtlsFactory.cpp  DtlsFactory.h  DtlsSocket.cpp  DtlsSocket.h  DtlsTimer.cpp  DtlsTimer.h  OpenSSLInit.cpp  OpenSSLInit.h  bf_dwrap.c
erizo/src/erizo/lib/: Clock.h  LibNiceInterface.h  LibNiceInterfaceImpl.cpp  TokenBucket.cpp  TokenBucket.h
erizo/src/erizo/media/: ExternalInput.cpp  ExternalInput.h  ExternalOutput.cpp  ExternalOutput.h  MediaProcessor.cpp  MediaProcessor.h  OneToManyTranscoder.cpp  OneToManyTranscoder.h  SyntheticInput.cpp  SyntheticInput.h
erizo/src/erizo/pipeline/: Handler.h  HandlerContext-inl.h  HandlerContext.h  Pipeline-inl.h  Pipeline.cpp  Pipeline.h  Service.h
erizo/src/erizo/rtp/: BandwidthEstimationHandler.cpp  BandwidthEstimationHandler.h  FecReceiverHandler.cpp  FecReceiverHandler.h  LayerBitrateCalculationHandler.cpp  LayerBitrateCalculationHandler.h  LayerDetectorHandler.cpp  (+60 more)
(+85 files in other folders)
